# itinerary-optimizer

./: .env.example  pyproject.toml  requirements.txt  test_rtw.py
.claude/: settings.json
app/: agent.py  config.py  main.py  models.py  providers.py
postman/: Itinerary_Optimizer.postman_collection.json  Local.postman_environment.json  Production.postman_environment.json
prompts/: system.txt
prompts/default/: 01_role.txt  02_constraints.txt  03.1_rules_best_price.txt  03.2_rules_shortest_time.txt  03.3_rules_fewest_stops.txt  03.4_rules_best_choice.txt  03_rules_general.txt  04.1_strategy_best_price.txt  04.2_strategy_shortest_time.txt  04.3_strategy_fewest_stops.txt  04.4_strategy_best_choice.txt  05_output_format.txt  06_system_rules.txt
static/: sandbox.html
